# glomop

./: README.md
tcsproxy/: Makefile.in  README  config_tr.h.in  configure  configure.in  configure.in.tcl  configure.in.tk  gm_options.aspolito  gm_options.cs294-6  gm_options.dist  gm_options.fox  gm_options.fox.2  gm_options.gribble  gm_options.iang  gm_options.iang.2  gm_options.sample  gm_options.tkimball  gm_options.transend  gm_options.transend-beta2  gm_options.yatin  mime.types  mkdep
tcsproxy/2bit_munger/: Makefile.in
tcsproxy/2bit_munger/include/: ARGS.h  cdjpeg.h  ditpic.h  gif2grey.h  gj_mem_src_dst_mgr.h  hipass.h  izoom.h  jpg2grey.h  link.h  propdit.h
tcsproxy/2bit_munger/src/: 2bit_munger.c  ditpic.c  gif2grey.c  gj_mem_src_dst_mgr.c  hipass.c  izoom.c  jpg2grey.c  propdit.c  test_main.c
tcsproxy/Tbmp_munger/: Makefile.in  stimpy1bit.ppm  stimpy2bit.ppm
tcsproxy/Tbmp_munger/include/: ARGS.h  gj_mem_src_dst_mgr.h  pnmbufscale.h
tcsproxy/Tbmp_munger/src/: Tbmp_munge.c  giftoppm_munge.c  gj_mem_src_dst_mgr.c  jpgtoppm_munge.c  pnmbufscale.c  ppmbufquant.c  ppmbufs.c  test_main.c  test_pnmbufscale.c
tcsproxy/about/: index.html
tcsproxy/autom4te.cache/: output.0  requests  traces.0
tcsproxy/client_lib/: Makefile.in  part.config
tcsproxy/client_lib/include/: clib.h  configure.h  icp.h  part.h  utils.h
tcsproxy/client_lib/src/: clib.c  configure.c  gm_options.testclient  icp.c  part.c  testclient.c  utils.c
tcsproxy/doc/: aggregators.pod  building.pod  coding-stds.pod  contributions.txt  customize.pod  design.txt  distillers.pod  running.pod  tacctics.pod  ui.txt
tcsproxy/frontend/: Makefile.in  TBD
tcsproxy/frontend/include/: ARGS.h  comm_http.h  dataflow.h  debug.h  frontend.h  httpreq.h  thr_cntl.h  url_magic.h  userpref.h  wingreq.h
tcsproxy/frontend/src/: accept_upref.c  bfe_check.pl  cacheop.c  comm_http.c  dataflow.c  dispatch.c  fe_check.pl  forbid.c  frontend.c  httpgo.c  httpreq.c  httpsupport.c  log.c  parse_upref.c  snprintf.c  test_comm_http.c  test_distiller.c  test_e2epath.c  test_harvest.c  test_magic.c  test_ptm.c  test_thr_queue.c  testprefs.c  thr_mon.c  thr_queue.c  url_magic.c  userpref.c  winggo.c  wingreq.c
tcsproxy/gif_munger/: Makefile.in  distiller_test.tgz  geturls
tcsproxy/gif_munger/src/: ARGS.h  gif_munge.c  gif_munge.h  giftopnm.c  pnmscale.c  ppmpad.c  ppmquant.c  ppmtogif.c  test_main.c
tcsproxy/giftojpg_munger/: Makefile.in
tcsproxy/giftojpg_munger/include/: ARGS.h  gifjpg_munge.h  gj_mem_src_dst_mgr.h  jinclude.h
tcsproxy/giftojpg_munger/src/: gifjpg_munge.c  gj_mem_src_dst_mgr.c  test_main.c
tcsproxy/gui/: Makefile.in  README  TBD  array_procs.tcl  libmon.h  log_procs.tcl  make_new.tcl  monitor.c  monitor.tcl  monitortest.cc  sendudp.pl  timechart_procs.tcl  tudp.c
tcsproxy/harness/: Makefile.in  input  stimpy.ppm
tcsproxy/harness/include/: ARGS.h  cderror.h  giftoppm_munge.h  gj_mem_src_dst_mgr.h  jpgtoppm_munge.h  ppmbufs.h
tcsproxy/harness/src/: Tbmp_munge.c  giftoppm_munge.c  gj_mem_src_dst_mgr.c  jpgtoppm_munge.c  link.c  pnmbufscale.c  ppmbufquant.c  ppmbufs.c  test_giftoppm.c  test_jpgtoppm.c  test_main.c
tcsproxy/html_munger/: Makefile.in  in.html  out.html
tcsproxy/html_munger/sgml-lex-19960207/: Makefile  README  excerpt.pl  filter.c  foobar  grab-pre.pl  html_munger  lex-test.sgm  main.c  sgml-lex.html  sgml.c  sgml.l  sgml_act.c  sgml_dumpevent.c  sgml_lex.c  sgml_lex.h  sgml_tab.c  sgmllexmodule.c  sgmllib.py  test.expected
tcsproxy/html_munger/src/: ARGS.h  munge.c  munge.h  munge_magic.c  test_main.c  test_munge.c
tcsproxy/java_stub/: HTMLDecoder.java  HTMLParser.java  HTMLTokenizer.java  Makefile.in  Proxy.java  distiller.c  java_stub.c
tcsproxy/jpg_munger/: Makefile.in  std_colormap.h  std_colormap.ppm
tcsproxy/jpg_munger/include/: ARGS.h  jpg_munge.h  mem_src_dst_mgr.h
tcsproxy/jpg_munger/src/: jpg_munge.c  mem_src_dst_mgr.c  test_main.c
tcsproxy/mash_stub/: Makefile.in
tcsproxy/mash_stub/src/: mash_stub.cc  tcl_stub.cc
tcsproxy/perl_dir/: BayAreaCulture.agg  Dispatcher.pl  WingDispatch.pl  caller.pl  fox.text.html  fox.text.html-redify  harness  kwhilite.pl  kwhilite.pl.1  kwhilite.pl.2  kwhilite.pl.3  kwhilite.pl.4  layout.tcl  metasearch  metasearch.html  miniserver.pl  nci_proxy.pl  t1  text.html  text.html.redify  traffic.pl  transend.text.html  transend.text.piml  unpack_tstr.pl  wingman.agg.pl
tcsproxy/perl_stub/: Makefile.in
tcsproxy/perl_stub/src/: perl_stub.c
tcsproxy/pilotFonts/: font0.pcf  font1.pcf  font2.pcf  fonts.alias  fonts.dir  pack-font.pl  raw2c  showfont2raw  unpack-font.pl
tcsproxy/playback/: Makefile.in  pctl
tcsproxy/playback/include/: bp_timer.h  http_task.h  logparse.h  playback_sched.h  simclient.h
tcsproxy/playback/logparse/: count_parallel.pl  count_traces.pl  getmax.pl  httpde_univ.c  idea.c  idea.h  univ_traces.pl
tcsproxy/playback/src/: anon_clients.c  bp_timer.c  count_parallel.c  gen_log.c  hip_main.c  http_task.c  logparse.c  main.c  new_bp_engine.c  playback_sched.c  sep_clients.c  showtrace.c  simclient.c  tracestats.c  wingmain.c
tcsproxy/playback/statsruns/: avg_size.pl  count2.pl  gen_size_histo.pl  gen_sizes.c  mergetypes.pl  sep3.pl  sepknown.pl
tcsproxy/playback/tracetools/: average_peak.pl  count_events.pl  test.txt  timeconvert.c
tcsproxy/ptm/: Makefile  Makefile.in  distillers.db.gribble  distillers.db.sample  distillers.db.yatin
tcsproxy/ptm/include/: c_defines.h  cache.h  cacheman.h  cachenet.h  communication.h  database.h  defines.h  distdb.h  distiller.h  distinterface.h  distlaunch.h  dump.h  error.h  eventhan.h  garbage.h  gm_mutex.h  gmdebug.h  linkedlist.h  log.h  monitor.h  optdb.h  options.h  packet.h  proxyinterface.h  ptm.h  ptmdb.h  ptmnet.h  ptmqueue.h  reqrep.h  rexec.h  threads.h
tcsproxy/tcl_stub/: Makefile.in
tcsproxy/tcl_stub/src/: tcl_stub.cc
tcsproxy/tcp_redirect/: Makefile.in
tcsproxy/text2doc/: Makefile.in
tcsproxy/xs/: Layout.pm  MANIFEST  Makefile.PL.in  Para.pm  PilotFonts.pm  SimpleFont.pm  TACCutils.pm  clib.pm  clib.xs  typemap  util.pl
(+3591 files in other folders)
